# tex2typst-py

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  entry.js  justfile  package.json  pyproject.toml  tex2typst.pyi
.github/: renovate.json5
.github/workflows/: CI.yml
js/: tex2typst.bundle.js
src/: lib.rs
tests/: test_benchmark.py  test_cached.py  test_error.py  test_list_input.py  test_pytex2typst.py
tex2typst/: __init__.py
